--- a/problems/155.min-stack.md
+++ b/problems/155.min-stack.md
@@ -32,7 +32,228 @@ minStack.getMin();   --> Returns -2.
 - snapchat
 - uber
 - zenefits
-## 思路
+
+
+## 两个栈
+
+### 思路
+
+我们使用两个栈：
+
+- 一个栈存放全部的元素，push，pop都是正常操作这个正常栈。
+- 另一个存放最小栈。 每次push，如果比最小栈的栈顶还小，我们就push进最小栈，否则不操作
+- 每次pop的时候，我们都判断其是否和最小栈栈顶元素相同，如果相同，那么我们pop掉最小栈的栈顶元素即可
+
+### 关键点
+
+- 往minstack中 push的判断条件。 应该是stack为空或者x小于等于minstack栈顶元素
+
+
+### 代码
+
+* 语言支持：JS，C++，Java，Python
+
+JavaScript Code:
+
+```js
+/**
+ * initialize your data structure here.
+ */
+var MinStack = function() {
+    this.stack = []
+    this.minStack = []
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MinStack.prototype.push = function(x) {
+    this.stack.push(x)
+    if (this.minStack.length == 0 ||  x <= this.minStack[this.minStack.length - 1]) {
+        this.minStack.push(x)
+    }
+};
+
+/**
+ * @return {void}
+ */
+MinStack.prototype.pop = function() {
+    const x = this.stack.pop()
+    if (x !== void 0 &&  x === this.minStack[this.minStack.length - 1]) {
+        this.minStack.pop()
+    }
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.top = function() {
+    return this.stack[this.stack.length - 1]
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.min = function() {
+    return this.minStack[this.minStack.length - 1]
+};
+
+/** 
+ * Your MinStack object will be instantiated and called as such:
+ * var obj = new MinStack()
+ * obj.push(x)
+ * obj.pop()
+ * var param_3 = obj.top()
+ * var param_4 = obj.min()
+ */
+```
+
+C++ Code:
+```c++
+class MinStack {
+    stack<int> data;
+    stack<int> helper;
+public:
+    /** initialize your data structure here. */
+    MinStack() {
+        
+    }
+    
+    void push(int x) {
+        data.push(x);
+        if(helper.empty() || helper.top() >= x)
+        {
+            helper.push(x);
+        }
+        
+    }
+    
+    void pop() {
+        int top = data.top();
+        data.pop();
+        if(top == helper.top())
+        {
+            helper.pop();
+        }
+        
+    }
+    
+    int top() {
+        return data.top();
+    }
+    
+    int getMin() {
+        return helper.top();
+    }
+};
+
+/**
+ * Your MinStack object will be instantiated and called as such:
+ * MinStack* obj = new MinStack();
+ * obj->push(x);
+ * obj->pop();
+ * int param_3 = obj->top();
+ * int param_4 = obj->getMin();
+ */
+```
+
+Java Code:
+```java
+public class MinStack {
+
+    // 数据栈
+    private Stack<Integer> data;
+    // 辅助栈
+    private Stack<Integer> helper;
+
+    /**
+     * initialize your data structure here.
+     */
+    public MinStack() {
+        data = new Stack<>();
+        helper = new Stack<>();
+    }
+    
+    public void push(int x) {
+        // 辅助栈在必要的时候才增加
+        data.add(x);
+        if (helper.isEmpty() || helper.peek() >= x) {
+            helper.add(x);
+        }
+    }
+
+    public void pop() {
+        // 关键 3：data 一定得 pop()
+        if (!data.isEmpty()) {
+            // 注意：声明成 int 类型，这里完成了自动拆箱，从 Integer 转成了 int，
+            // 因此下面的比较可以使用 "==" 运算符
+            int top = data.pop();
+            if(top == helper.peek()){
+                helper.pop();
+            }
+        }
+    }
+
+    public int top() {
+        if(!data.isEmpty()){
+            return data.peek();
+        }
+    }
+
+    public int getMin() {
+        if(!helper.isEmpty()){
+            return helper.peek();
+        }
+    }
+}
+```
+
+Python3 Code:
+
+```python
+class MinStack:
+
+    def __init__(self):
+        """
+        initialize your data structure here.
+        """
+        self.stack = []
+        self.minstack = []
+
+    def push(self, x: int) -> None:
+        self.stack.append(x)
+        if not self.minstack or x <= self.minstack[-1]:
+            self.minstack.append(x)
+
+    def pop(self) -> None:
+        tmp = self.stack.pop()
+        if tmp == self.minstack[-1]:
+            self.minstack.pop()
+
+    def top(self) -> int:
+        return self.stack[-1]
+
+    def min(self) -> int:
+        return self.minstack[-1]
+
+
+# Your MinStack object will be instantiated and called as such:
+# obj = MinStack()
+# obj.push(x)
+# obj.pop()
+# param_3 = obj.top()
+# param_4 = obj.min()
+```
+
+**复杂度分析**
+- 时间复杂度：O(1)
+- 空间复杂度：O(1)
+
+
+## 一个栈
+
+### 思路
 
 符合直觉的方法是，每次对栈进行修改操作（push和pop）的时候更新最小值。 然后getMin只需要返回我们计算的最小值即可，
 top也是直接返回栈顶元素即可。  这种做法每次修改栈都需要更新最小值，因此时间复杂度是O(n).
@@ -62,12 +283,12 @@ pop或者top的时候：
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlucqck9mj30ji0k1gn0.jpg)
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlucsjh58j30ht0b4mxr.jpg)
 
-## 关键点
+### 关键点
 
 - 最小栈存储的不应该是真实值，而是真实值和min的差值
 - top的时候涉及到对数据的还原，这里千万注意是**上一个**最小值
 
-## 代码
+### 代码
 
 * 语言支持：JS，C++，Java，Python
 
@@ -297,221 +518,6 @@ class MinStack:
     def min(self) -> int:
         return self.minV
 
-
-
-# Your MinStack object will be instantiated and called as such:
-# obj = MinStack()
-# obj.push(x)
-# obj.pop()
-# param_3 = obj.top()
-# param_4 = obj.min()
-```
-
-**复杂度分析**
-- 时间复杂度：O(1)
-- 空间复杂度：O(1)
-
-
-# 两个栈
-
-## 思路
-
-我们使用两个栈：
-
-- 一个栈存放全部的元素，push，pop都是正常操作这个正常栈。
-- 另一个存放最小栈。 每次push，如果比最小栈的栈顶还小，我们就push进最小栈，否则不操作
-- 每次pop的时候，我们都判断其是否和最小栈栈顶元素相同，如果相同，那么我们pop掉最小栈的栈顶元素即可
-
-## 关键点
-
-- 往minstack中 push的判断条件。 应该是stack为空或者x小于等于minstack栈顶元素
-
-
-## 代码
-
-JavaScript Code:
-
-```js
-/**
- * initialize your data structure here.
- */
-var MinStack = function() {
-    this.stack = []
-    this.minStack = []
-};
-
-/** 
- * @param {number} x
- * @return {void}
- */
-MinStack.prototype.push = function(x) {
-    this.stack.push(x)
-    if (this.minStack.length == 0 ||  x <= this.minStack[this.minStack.length - 1]) {
-        this.minStack.push(x)
-    }
-};
-
-/**
- * @return {void}
- */
-MinStack.prototype.pop = function() {
-    const x = this.stack.pop()
-    if (x !== void 0 &&  x === this.minStack[this.minStack.length - 1]) {
-        this.minStack.pop()
-    }
-};
-
-/**
- * @return {number}
- */
-MinStack.prototype.top = function() {
-    return this.stack[this.stack.length - 1]
-};
-
-/**
- * @return {number}
- */
-MinStack.prototype.min = function() {
-    return this.minStack[this.minStack.length - 1]
-};
-
-/** 
- * Your MinStack object will be instantiated and called as such:
- * var obj = new MinStack()
- * obj.push(x)
- * obj.pop()
- * var param_3 = obj.top()
- * var param_4 = obj.min()
- */
-```
-
-C++ Code:
-```c++
-class MinStack {
-    stack<int> data;
-    stack<int> helper;
-public:
-    /** initialize your data structure here. */
-    MinStack() {
-        
-    }
-    
-    void push(int x) {
-        data.push(x);
-        if(helper.empty() || helper.top() >= x)
-        {
-            helper.push(x);
-        }
-        
-    }
-    
-    void pop() {
-        int top = data.top();
-        data.pop();
-        if(top == helper.top())
-        {
-            helper.pop();
-        }
-        
-    }
-    
-    int top() {
-        return data.top();
-    }
-    
-    int getMin() {
-        return helper.top();
-    }
-};
-
-/**
- * Your MinStack object will be instantiated and called as such:
- * MinStack* obj = new MinStack();
- * obj->push(x);
- * obj->pop();
- * int param_3 = obj->top();
- * int param_4 = obj->getMin();
- */
-```
-
-Java Code:
-```java
-public class MinStack {
-
-    // 数据栈
-    private Stack<Integer> data;
-    // 辅助栈
-    private Stack<Integer> helper;
-
-    /**
-     * initialize your data structure here.
-     */
-    public MinStack() {
-        data = new Stack<>();
-        helper = new Stack<>();
-    }
-    
-    public void push(int x) {
-        // 辅助栈在必要的时候才增加
-        data.add(x);
-        if (helper.isEmpty() || helper.peek() >= x) {
-            helper.add(x);
-        }
-    }
-
-    public void pop() {
-        // 关键 3：data 一定得 pop()
-        if (!data.isEmpty()) {
-            // 注意：声明成 int 类型，这里完成了自动拆箱，从 Integer 转成了 int，
-            // 因此下面的比较可以使用 "==" 运算符
-            int top = data.pop();
-            if(top == helper.peek()){
-                helper.pop();
-            }
-        }
-    }
-
-    public int top() {
-        if(!data.isEmpty()){
-            return data.peek();
-        }
-    }
-
-    public int getMin() {
-        if(!helper.isEmpty()){
-            return helper.peek();
-        }
-    }
-}
-```
-
-Python3 Code:
-
-```python
-class MinStack:
-
-    def __init__(self):
-        """
-        initialize your data structure here.
-        """
-        self.stack = []
-        self.minstack = []
-
-    def push(self, x: int) -> None:
-        self.stack.append(x)
-        if not self.minstack or x <= self.minstack[-1]:
-            self.minstack.append(x)
-
-    def pop(self) -> None:
-        tmp = self.stack.pop()
-        if tmp == self.minstack[-1]:
-            self.minstack.pop()
-
-    def top(self) -> int:
-        return self.stack[-1]
-
-    def min(self) -> int:
-        return self.minstack[-1]
 
 
 # Your MinStack object will be instantiated and called as such:
