--- a/problems/167.two-sum-ii-input-array-is-sorted.md
+++ b/problems/167.two-sum-ii-input-array-is-sorted.md
@@ -27,6 +27,10 @@ Explanation: The sum of 2 and 7 is 9. Therefore index1 = 1, index2 = 2.
 
 - 双指针
 
+## 公司
+
+- amazon
+
 ## 思路
 
 由于题目没有对空间复杂度有求，用一个hashmap  存储已经访问过的数字即可。
