--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -26,7 +26,12 @@ Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (m
 
 ## 前置知识
 
-- 动态规划
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
+## 公司
+
+- airbnb
+- linkedin
   
 ## 思路
 
@@ -188,3 +193,14 @@ class Solution:
                 cur, prev = max(prev + nums[i], cur), cur
             return cur
 ```
+
+**复杂度分析**
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
