--- a/problems/263.ugly-number.md
+++ b/problems/263.ugly-number.md
@@ -33,7 +33,9 @@ Input is within the 32-bit signed integer range: [−231,  231 − 1].
 
 ## 前置知识
 
+- 数学
 - 因数分解
+
   
 ## 思路
 
@@ -98,6 +100,10 @@ var isUgly = function(num) {
 };
 ```
 
+**复杂度分析**
+- 时间复杂度：$O(logN)$
+- 空间复杂度：$O(logN)$
+
 Python Code:
 
 ```python
@@ -111,3 +117,13 @@ class Solution:
                 num /= i
         return num == 1
 ```
+**复杂度分析**
+- 时间复杂度：$O(logN)$
+- 空间复杂度：$O(1)$
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
