--- a/problems/283.move-zeroes.md
+++ b/problems/283.move-zeroes.md
@@ -20,6 +20,7 @@ Minimize the total number of operations.
 ## 前置知识
 
 - [数组](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+- 双指针
 
 ## 公司
 
@@ -38,7 +39,7 @@ Minimize the total number of operations.
 
 ## 关键点解析
 
-无
+- 双指针
 
 ## 代码
 
