--- a/problems/371.sum-of-two-integers.md
+++ b/problems/371.sum-of-two-integers.md
@@ -20,7 +20,7 @@ Output: 1
 
 ## 前置知识
 
-- 位运算
+- [位运算](https://github.com/azl397985856/leetcode/blob/master/thinkings/bit.md)
   
 ## 思路
 
@@ -121,3 +121,16 @@ class Solution:
             # print((a, b))
         return a if a < 0x80000000 else ~(a^0xFFFFFFFF)
 ```
+
+**复杂度分析**
+- 时间复杂度：$O(1)$
+- 空间复杂度：$O(1)$
+
+> 由于题目数据规模不会变化，因此其实复杂度分析是没有意义的。
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
