--- a/problems/1260.shift-2d-grid.md
+++ b/problems/1260.shift-2d-grid.md
@@ -47,7 +47,8 @@ https://leetcode-cn.com/problems/shift-2d-grid/description/
 
 ## 前置知识
 
-- 数组
+- [数组](https://github.com/azl397985856/leetcode/blob/master/thinkings/basic-data-structure.md)
+- 数学
 
 ## 暴力法
 
@@ -139,6 +140,10 @@ class Solution:
 
 ```
 
+**复杂度分析**
+- 时间复杂度：$O(N)$
+- 空间复杂度：$O(1)$
+
 ## 相关题目
 
 - [189. 旋转数组](https://leetcode-cn.com/problems/rotate-array/)
@@ -146,3 +151,11 @@ class Solution:
 ## 参考
 
 - [文科生都能看懂的循环移位算法](https://lucifer.ren/blog/2019/12/11/rotate-list/)
+
+
+更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经35K star啦。
+
+关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
+
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
