--- a/problems/322.coin-change.md
+++ b/problems/322.coin-change.md
@@ -23,6 +23,14 @@ You may assume that you have an infinite number of each kind of coin.
 ## 前置知识
 
 - 贪心算法
+
+## 公司
+
+- 阿里巴巴（盒马生鲜）
+
+## 岗位信息
+
+- 阿里巴巴（盒马生鲜）：前端技术二面
   
 ## 思路
 
