feat: 增加动态规划的跳转链接

--- a/problems/139.word-break.md
+++ b/problems/139.word-break.md
@@ -1,4 +1,3 @@
-
 ## 题目地址
 
 https://leetcode.com/problems/word-break/description/
@@ -32,28 +31,27 @@ Output: false
 
 ## 前置知识
 
-- 动态规划
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
 
 ## 思路
 
 这道题是给定一个字典和一个句子，判断该句子是否可以由字典里面的单词组出来，一个单词可以用多次。
 
 暴力的方法是无解的，复杂度极其高。 我们考虑其是否可以拆分为小问题来解决。
-对于问题`(s, wordDict)` 我们是否可以用(s', wordDict) 来解决。 其中s' 是s 的子序列，
-当s'变成寻常(长度为0)的时候问题就解决了。 我们状态转移方程变成了这道题的难点。
+对于问题`(s, wordDict)` 我们是否可以用(s', wordDict) 来解决。 其中 s' 是 s 的子序列，
+当 s'变成寻常(长度为 0)的时候问题就解决了。 我们状态转移方程变成了这道题的难点。
 
-我们可以建立一个数组dp, dp[i]代表 字符串 s.substring(0, i) 能否由字典里面的单词组成，
-值得注意的是，这里我们无法建立dp[i] 和 dp[i - 1] 的关系，
-我们可以建立的是dp[i - word.length] 和 dp[i] 的关系。
+我们可以建立一个数组 dp, dp[i]代表 字符串 s.substring(0, i) 能否由字典里面的单词组成，
+值得注意的是，这里我们无法建立 dp[i] 和 dp[i - 1] 的关系，
+我们可以建立的是 dp[i - word.length] 和 dp[i] 的关系。
 
 我们用图来感受一下：
 
 ![139.word-break-1](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu370c2hj30n60cnmy6.jpg)
 
-
 没有明白也没有关系，我们分步骤解读一下：
 
-（以下的图左边都代表s，右边都是dict，灰色代表没有处理的字符，绿色代表匹配成功，红色代表匹配失败）
+（以下的图左边都代表 s，右边都是 dict，灰色代表没有处理的字符，绿色代表匹配成功，红色代表匹配失败）
 
 ![139.word-break-2](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu37ydiwj30aw0b1mxc.jpg)
 
@@ -62,7 +60,6 @@ Output: false
 ![139.word-break-4](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu3mmjmtj30mw09ymxp.jpg)
 
 ![139.word-break-5](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu3qr7ppj30n90kqabg.jpg)
-
 
 上面分步解释了算法的基本过程，下面我们感性认识下这道题，我把它比喻为
 你正在`往一个老式手电筒🔦中装电池`
@@ -129,15 +126,15 @@ Output: false
  * @param {string[]} wordDict
  * @return {boolean}
  */
-var wordBreak = function(s, wordDict) {
+var wordBreak = function (s, wordDict) {
   const dp = Array(s.length + 1);
   dp[0] = true;
   for (let i = 0; i < s.length + 1; i++) {
     for (let word of wordDict) {
       if (word.length <= i && dp[i - word.length]) {
-          if (s.substring(i - word.length, i) === word) {
-            dp[i] = true;
-          }
+        if (s.substring(i - word.length, i) === word) {
+          dp[i] = true;
+        }
       }
     }
   }
