--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -26,8 +26,8 @@ Explanation: Rob house 1 (money = 2), rob house 3 (money = 9) and rob house 5 (m
 
 ## 前置知识
 
-- 动态规划
-  
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
 ## 思路
 
 这是一道非常典型且简单的动态规划问题，但是在这里我希望通过这个例子，
@@ -81,7 +81,7 @@ return b;
 
 ## 代码
 
-* 语言支持：JS，C++，Python
+- 语言支持：JS，C++，Python
 
 JavaScript Code：
 
@@ -133,7 +133,7 @@ JavaScript Code：
  * @param {number[]} nums
  * @return {number}
  */
-var rob = function(nums) {
+var rob = function (nums) {
   // Tag: DP
   const dp = [];
   dp[0] = 0;
@@ -149,7 +149,7 @@ var rob = function(nums) {
 
 C++ Code：
 
-> 与JavaScript代码略有差异，但状态迁移方程是一样的。
+> 与 JavaScript 代码略有差异，但状态迁移方程是一样的。
 
 ```C++
 class Solution {
