--- a/problems/322.coin-change.md
+++ b/problems/322.coin-change.md
@@ -1,15 +1,16 @@
-
 ## 题目地址
+
 https://leetcode.com/problems/coin-change/description/
 
 ## 题目描述
+
 ```
 You are given coins of different denominations and a total amount of money amount. Write a function to compute the fewest number of coins that you need to make up that amount. If that amount of money cannot be made up by any combination of the coins, return -1.
 
 Example 1:
 
 Input: coins = [1, 2, 5], amount = 11
-Output: 3 
+Output: 3
 Explanation: 11 = 5 + 5 + 1
 Example 2:
 
@@ -23,11 +24,11 @@ You may assume that you have an infinite number of each kind of coin.
 ## 前置知识
 
 - 贪心算法
-  
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
 ## 思路
 
-
-假如我们把coin逆序排列，然后逐个取，取到刚好不大于amout，依次类推。
+假如我们把 coin 逆序排列，然后逐个取，取到刚好不大于 amout，依次类推。
 
 ```
 eg: 对于 [1,2,5] 组成 11 块
@@ -51,7 +52,7 @@ eg: 对于 [1,2,5] 组成 11 块
 因此结果是 3
 ```
 
-熟悉贪心算法的同学应该已经注意到了，这就是贪心算法，贪心算法更amount尽快地变得更小。
+熟悉贪心算法的同学应该已经注意到了，这就是贪心算法，贪心算法更 amount 尽快地变得更小。
 `经验表明，贪心策略是正确的`。 注意，我说的是经验表明， 贪心算法也有可能出错。 就拿这道题目来说，
 他也是不正确的！ 比如 `coins = [1, 5, 11] amout = 15`, 因此这种做法有时候不靠谱，我们还是采用靠谱的做法.
 
@@ -84,24 +85,26 @@ class Solution:
                     dp[i][j] = dp[i][j - 1]
 
         return -1 if dp[-1][-1] == amount + 1 else dp[-1][-1]
- ```
- 
- **复杂度分析**
+```
+
+**复杂度分析**
+
 - 时间复杂度：$O(amonut * len(coins))$
 - 空间复杂度：$O(amount * len(coins))$
 
-dp[i][j] 依赖于` dp[i][j - 1]`和 `dp[i - coins[j - 1]][j] + 1)` 这是一个优化的信号，我们可以将其优化到一维,具体见下方。
+dp[i][j] 依赖于`dp[i][j - 1]`和 `dp[i - coins[j - 1]][j] + 1)` 这是一个优化的信号，我们可以将其优化到一维,具体见下方。
+
 ## 关键点解析
 
 - 动态规划
 
 - 子问题
 
-用dp[i] 来表示组成i块钱，需要最少的硬币数，那么
+用 dp[i] 来表示组成 i 块钱，需要最少的硬币数，那么
 
-1. 第j个硬币我可以选择不拿       这个时候， 硬币数 =  dp[i]
+1. 第 j 个硬币我可以选择不拿 这个时候， 硬币数 = dp[i]
 
-2. 第j个硬币我可以选择拿     这个时候， 硬币数 =  dp[i - coins[j]] + 1
+2. 第 j 个硬币我可以选择拿 这个时候， 硬币数 = dp[i - coins[j]] + 1
 
 - 和背包问题不同， 硬币是可以拿任意个
 
@@ -109,33 +112,33 @@ dp[i][j] 依赖于` dp[i][j - 1]`和 `dp[i - coins[j - 1]][j] + 1)` 这是一个
 
 ## 代码
 
-
-* 语言支持：JS，C++,Python3
+- 语言支持：JS，C++,Python3
 
 JavaScript Code：
-```js
 
-var coinChange = function(coins, amount) {
-    if (amount === 0) {
-      return 0;
-    }
-    const dp = Array(amount + 1).fill(Number.MAX_VALUE)
-    dp[0] = 0;
-    for (let i = 1; i < dp.length; i++) {
-      for (let j = 0; j < coins.length; j++) {
-        if (i - coins[j] >= 0) {
-          dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
-        }
+```js
+var coinChange = function (coins, amount) {
+  if (amount === 0) {
+    return 0;
+  }
+  const dp = Array(amount + 1).fill(Number.MAX_VALUE);
+  dp[0] = 0;
+  for (let i = 1; i < dp.length; i++) {
+    for (let j = 0; j < coins.length; j++) {
+      if (i - coins[j] >= 0) {
+        dp[i] = Math.min(dp[i], dp[i - coins[j]] + 1);
       }
     }
+  }
 
-    return dp[dp.length - 1] === Number.MAX_VALUE ? -1 : dp[dp.length - 1];
-
-
+  return dp[dp.length - 1] === Number.MAX_VALUE ? -1 : dp[dp.length - 1];
 };
 ```
+
 C++ Code：
-> C++中采用INT_MAX，因此判断时需要加上`dp[a - coin] < INT_MAX`以防止溢出
+
+> C++中采用 INT_MAX，因此判断时需要加上`dp[a - coin] < INT_MAX`以防止溢出
+
 ```C++
 class Solution {
 public:
@@ -171,9 +174,9 @@ class Solution:
 ```
 
 **复杂度分析**
+
 - 时间复杂度：$O(amonut * len(coins))$
 - 空间复杂度：$O(amount)$
-
 
 ## 扩展
 
