--- a/problems/416.partition-equal-subset-sum.md
+++ b/problems/416.partition-equal-subset-sum.md
@@ -30,8 +30,8 @@
 ## 前置知识
 
 - DFS
-- 动态规划
- 
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
 ### 思路
 
 抽象能力不管是在工程还是算法中都占据着绝对重要的位置。比如上题我们可以抽象为：
