--- a/problems/518.coin-change-2.md
+++ b/problems/518.coin-change-2.md
@@ -36,7 +36,7 @@ https://leetcode-cn.com/problems/coin-change-2/description/
 
 ## 前置知识
 
-- 动态规划
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
 - 背包问题
 
 ## 思路
@@ -65,7 +65,7 @@ https://leetcode-cn.com/problems/coin-change-2/description/
 
 2. 第 j 个硬币我可以选择拿 这个时候， 组成数 = dp[i - coins[j]] + dp[i]
 
-- 和01背包问题不同， 硬币是可以拿任意个，属于完全背包问题
+- 和 01 背包问题不同， 硬币是可以拿任意个，属于完全背包问题
 
 - 对于每一个 dp[i] 我们都选择遍历一遍 coin， 不断更新 dp[i]
 
@@ -122,9 +122,7 @@ return dp[dp.length - 1];
 
 ## 代码
 
-
 代码支持：Python3，JavaScript：
-
 
 JavaSCript Code:
 
@@ -140,7 +138,7 @@ JavaSCript Code:
  * @param {number[]} coins
  * @return {number}
  */
-var change = function(amount, coins) {
+var change = function (amount, coins) {
   if (amount === 0) return 1;
 
   const dp = [1].concat(Array(amount).fill(0));
