--- a/problems/91.decode-ways.md
+++ b/problems/91.decode-ways.md
@@ -28,7 +28,7 @@ Explanation: It could be decoded as "BZ" (2 26), "VF" (22 6), or "BBF" (2 2 6).
 ## 前置知识
 
 - 爬楼梯问题
-- 动态规划
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
 
 ## 思路
 
