--- a/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
+++ b/problems/309.best-time-to-buy-and-sell-stock-with-cooldown.md
@@ -20,8 +20,8 @@ Explanation: transactions = [buy, sell, cooldown, buy, sell]
 
 ## 前置知识
 
-- 动态规划
-  
+- [动态规划](https://github.com/azl397985856/leetcode/blob/master/thinkings/dynamic-programming.md)
+
 ## 思路
 
 这是一道典型的 DP 问题， DP 问题的核心是找到状态和状态转移方程。
@@ -77,7 +77,7 @@ sell[i]对应第 i 的 action 只能是 sell 或者 cooldown。
  * @param {number[]} prices
  * @return {number}
  */
-var maxProfit = function(prices) {
+var maxProfit = function (prices) {
   if (prices == null || prices.length <= 1) return 0;
 
   // 定义状态变量
