feat(ml):$263.ugly-number.md (#416)

--- a/problems/263.ugly-number.md
+++ b/problems/263.ugly-number.md
@@ -76,7 +76,7 @@ Input is within the 32-bit signed integer range: [−231,  231 − 1].
 
 ## 代码
 
-* 语言支持：JS, Python
+* 语言支持：JS, C++, Java, Python
 
 Javascript Code:
 
@@ -109,6 +109,43 @@ var isUgly = function(num) {
 **复杂度分析**
 - 时间复杂度：$O(logN)$
 - 空间复杂度：$O(logN)$
+
+C++ Code:
+
+```c++
+class Solution {
+public:
+    bool isUgly(int num) {
+        int ugly[] = {2,3,5};
+        for(int u : ugly)
+        {
+            while(num%u==0 && num%u < num)
+            {
+                num/=u;
+            }
+        }
+        return num == 1;
+    }
+};
+```
+
+Java Code:
+
+```java
+class Solution {
+    public boolean isUgly(int num) {
+        int [] ugly = {2,3,5};
+        for(int u : ugly)
+        {
+            while(num%u==0 && num%u < num)
+            {
+                num/=u;
+            }
+        }
+        return num == 1;
+    }
+}
+```
 
 Python Code:
 
