feat(ml): Update 55.jump-game.md (#417)
添加C++、Java支持

--- a/problems/55.jump-game.md
+++ b/problems/55.jump-game.md
@@ -46,8 +46,8 @@ Explanation: You will always arrive at index 3 no matter what. Its maximum
 
 ## 代码
 
-- 语言支持: Javascript，Python3
-
+- 语言支持: Javascript,C++,Java,Python3
+Javascript Code:
 ```js
 /**
  * @param {number[]} nums
@@ -63,6 +63,55 @@ var canJump = function (nums) {
 
   return max >= nums.length - 1;
 };
+```
+
+C++ Code:
+
+```c++
+class Solution {
+public:
+    bool canJump(vector<int>& nums) {
+        int n=nums.size();
+        int k=0;
+        for(int i=0;i<n;i++)
+        {
+            if(i>k){
+                return false;
+            }
+            // 能跳到最后一个位置
+            if(k>=n-1){
+                return true;
+            }
+            // 从当前位置能跳的最远的位置
+            k = max(k, i+nums[i]);
+        }
+        return k >= n-1;
+    }
+};
+```
+
+Java Code:
+
+```java
+class Solution {
+    public boolean canJump(int[] nums) {
+        int n=nums.length;
+        int k=0;
+        for(int i=0;i<n;i++)
+        {
+            if(i>k){
+                return false;
+            }
+            // 能跳到最后一个位置
+            if(k>=n-1){
+                return true;
+            }
+            // 从当前位置能跳的最远的位置
+            k = Math.max(k, i+nums[i]);
+        }
+        return k >= n-1;
+    }
+}
 ```
 
 Python3 Code:
