--- a/problems/1262.greatest-sum-divisible-by-three.md
+++ b/problems/1262.greatest-sum-divisible-by-three.md
@@ -44,6 +44,7 @@ https://leetcode-cn.com/problems/greatest-sum-divisible-by-three/description/
 ## 公司
 
 - 字节
+- 网易有道
 
 ### 思路
 
@@ -249,3 +250,7 @@ class Solution:
 ## 扩展
 
 实际上，我们可以采取加法（贪婪策略），感兴趣的可以试一下。
+
+另外如果题目改成了`请你找出并返回能被x整除的元素最大和`，你只需要将我的解法中的 3 改成 x 即可。
+
+
