--- a/problems/62.unique-paths.md
+++ b/problems/62.unique-paths.md
@@ -38,6 +38,7 @@ Output: 28
 ## 前置知识
 
 - 动态规划
+- 排列组合
 
 ## 公司
 
@@ -47,6 +48,12 @@ Output: 28
 - 字节
 
 ## 思路
+
+首先这道题可以用排列组合的解法来解，需要一点高中的知识。
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1giwviy6wj6j32b80u0792.jpg)
+
+而这道题我们用动态规划来解。
 
 这是一道典型的适合使用动态规划解决的题目，它和爬楼梯等都属于动态规划中最简单的题目，因此也经常会被用于面试之中。
 
