--- a/problems/62.unique-paths.md
+++ b/problems/62.unique-paths.md
@@ -91,26 +91,25 @@ class Solution:
 
 当然你也可以使用记忆化递归的方式来进行，由于递归深度的原因，性能比上面的方法差不少：
 
-> 直接暴力递归的话会超时。
+> 直接暴力递归的话可能会超时。
 
 Python3 Code:
 
 ```python
 class Solution:
-    visited = dict()
-
+    
+    @lru_cache
     def uniquePaths(self, m: int, n: int) -> int:
-        if (m, n) in self.visited:
-            return self.visited[(m, n)]
         if m == 1 or n == 1:
             return 1
         cnt = self.uniquePaths(m - 1, n) + self.uniquePaths(m, n - 1)
-        self.visited[(m, n)] = cnt
         return cnt
 ```
 
+
 ## 关键点
 
+- 排列组合原理
 - 记忆化递归
 - 基本动态规划问题
 - 空间复杂度可以进一步优化到 O(n), 这会是一个考点
