--- a/problems/198.house-robber.md
+++ b/problems/198.house-robber.md
@@ -205,7 +205,7 @@ class Solution:
 
 ## 相关题目
 
-- [198.house-robber](https://github.com/azl397985856/leetcode/blob/master/problems/198.house-robber.md)
+- [337.house-robber-iii](https://github.com/azl397985856/leetcode/blob/master/problems/337.house-robber-iii.md)
 
 更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 35K star 啦。
 
