fix: 电子书勘误

--- a/problems/49.group-anagrams.md
+++ b/problems/49.group-anagrams.md
@@ -72,6 +72,8 @@ var groupAnagrams = function (strs) {
 
 ![49.group-anagrams](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlubhv58qj30n209474l.jpg)
 
+实际上，这就是桶排序的基本思想。 很多题目都用到了这种思想， 读者可以留心一下。
+
 ## 关键点解析
 
 - 桶排序
