--- a/problems/49.group-anagrams.md
+++ b/problems/49.group-anagrams.md
@@ -132,7 +132,7 @@ class Solution:
           for c in s:
             s_key[ord(c)-ord('a')] += 1
           str_dict[tuple(s_key)].append(s)
-        return str_dict.values()
+        return list(str_dict.values())
 ```
 
 **复杂度分析**
