feat(ml): $78.subsets.md (#451)
Co-authored-by: lucifer <azl397985856@gmail.com>

--- a/problems/78.subsets.md
+++ b/problems/78.subsets.md
@@ -61,7 +61,7 @@ https://leetcode-cn.com/problems/subsets/
 
 ## 代码
 
-- 语言支持：JS，C++
+- 语言支持：JS，C++，Java，Python
 
 JavaScript Code:
 
@@ -106,6 +106,57 @@ public:
         }
     }
 };
+```
+
+Java Code：
+
+```java
+class Solution {
+    // 结果
+    List<List<Integer>> res = new ArrayList();
+    public List<List<Integer>> subsets(int[] nums) {
+        backtrack(nums, 0, new ArrayList<Integer>());
+        return res;
+    }
+
+    public void backtrack(int[] nums, int start, ArrayList<Integer> track)
+    {
+        // 注意：深拷贝
+        res.add(new ArrayList(track));
+        for(int i=start; i<nums.length;i++)
+        {
+            // 做选择
+            track.add(nums[i]);
+            // 回溯
+            backtrack(nums, i+1, track);
+            // 撤销选择
+            track.remove(track.size()-1);
+        }
+    }
+}
+```
+
+python Code：
+
+```py
+class Solution:
+    def subsets(self, nums):
+        self.res = []
+        self.track = []
+        self.backtrack(nums, 0, self.track)
+
+        return self.res
+
+    def backtrack(self, nums, start, track):
+        # 注意深拷贝
+        self.res.append(list(self.track))
+        for i in range(start, len(nums)):
+            # 做选择
+            self.track.append(nums[i])
+            # 回溯
+            self.backtrack(nums, i+1, self.track)
+            # 撤销选择
+            self.track.pop()
 ```
 
 ## 相关题目
