feat(ml): $17.Letter-Combinations-of-a-Phone-Number.md (#454)
添加C++、Java、Python语言支持

--- a/problems/17.Letter-Combinations-of-a-Phone-Number.md
+++ b/problems/17.Letter-Combinations-of-a-Phone-Number.md
@@ -51,8 +51,9 @@ https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number
 
 ## 代码
 
-- 语言支持：JS
+- 语言支持：JS, C++, Java, Python
 
+JavaScript Code:
 ```js
 /**
  * @param {string} digits
@@ -87,6 +88,119 @@ const letterCombinations = function (digits) {
   generate(0, "");
   return result;
 };
+```
+
+
+C++ Code:
+```c++
+class Solution {
+public:
+    string letterMap[10] = {" "," ","abc","def","ghi","jkl","mno","pqrs","tuv","wxyz"};
+    vector<string> res;
+    vector<string> letterCombinations(string digits) {
+        if(digits == "")
+        {
+            return res;
+        }
+        dfs(digits, 0, "");
+        return res;
+    }
+
+    void dfs(string digits, int index, string s)
+    {
+        if(index == digits.length())
+        {
+            res.push_back(s);
+            return;
+        }
+        // 获取当前数字
+        char c = digits[index];
+        // 获取数字对应字母
+        string letters = letterMap[c-'0'];
+        for(int i = 0 ; i < letters.length() ; i ++)
+        {
+            dfs(digits, index+1, s+letters[i]);
+        }
+    }
+}
+```
+
+Java Code:
+```java
+class Solution {
+
+    private String letterMap[] = {
+            " ",    //0
+            "",     //1
+            "abc",  //2
+            "def",  //3
+            "ghi",  //4
+            "jkl",  //5
+            "mno",  //6
+            "pqrs", //7
+            "tuv",  //8
+            "wxyz"  //9
+    };
+    private ArrayList<String> res;
+    public List<String> letterCombinations(String digits) {
+        res = new ArrayList<String>();
+        if(digits.equals(""))
+        {
+            return res;
+        }
+        dfs(digits, 0, "");
+        return res;
+    }
+
+    public void dfs(String digits, int index, String s)
+    {
+        if(index == digits.length())
+        {
+            res.add(s);
+            return;
+        }
+        // 获取当前数字
+        Character c = digits.charAt(index);
+        // 获取数字对应字母
+        String letters = letterMap[c-'0'];
+        for(int i = 0 ; i < letters.length() ; i ++)
+        {
+            dfs(digits, index+1, s+letters.charAt(i));
+        }
+    }
+}
+```
+
+Python Code:
+```py
+class Solution(object):
+    def letterCombinations(self, digits):
+        """
+        :type digits: str
+        :rtype: List[str]
+        """
+        if not digits:
+            return []
+        # 0-9
+        self.d = [" "," ","abc","def","ghi","jkl","mno","pqrs","tuv","wxyz"]
+        self.res = []
+        self.dfs(digits, 0, "")
+        return self.res
+    
+    def dfs(self, digits, index, s):
+        # 递归的终止条件,用index记录每次遍历到字符串的位置
+        if index == len(digits):
+            self.res.append(s)
+            return
+        # 获取当前数字
+        c = digits[index]
+        # print(c, int(c))
+        # 获取数字对应字母
+        letters = self.d[int(c)]
+        # 遍历字符串
+        for l in letters:
+            # 调用下一层
+            self.dfs(digits, index+1, s+l)
 ```
 
 **复杂度分析**
