--- a/problems/150.evaluate-reverse-polish-notation.md
+++ b/problems/150.evaluate-reverse-polish-notation.md
@@ -92,7 +92,9 @@ https://leetcode-cn.com/problems/evaluate-reverse-polish-notation/
 
 ## 代码
 
-代码支持：JS，Python
+代码支持：JS，Python，Java
+
+JS Code:
 
 ```js
 /**
@@ -133,6 +135,9 @@ var evalRPN = function(tokens) {
 
 ```
 
+
+Python Code:
+
 ```python
 class Solution:
     def evalRPN(self, tokens: List[str]) -> int:
@@ -156,6 +161,32 @@ class Solution:
                     stack.append(token)
             return stack[0]
         return int(tokens[-1])
+```
+
+
+Java Code:
+
+```java
+class Solution {
+    public static int evalRPN(String[] tokens) {
+	int[] numStack = new int[tokens.length / 2 + 1];
+	int index = 0;
+	for (String s : tokens) {
+	    if (s.equals("+")) {
+                numStack[index - 2] += numStack[--index];
+            } else if (s.equals("-")) {
+                numStack[index - 2] -= numStack[--index];
+            } else if (s.equals("*")) {
+                numStack[index - 2] *= numStack[--index];
+            } else if (s.equals("/")) {
+                numStack[index - 2] /= numStack[--index];
+            } else {
+                numStack[index++] = Integer.parseInt(s);
+            }
+	}
+	return numStack[0];
+    }
+}
 ```
 
 
