--- a/problems/75.sort-colors.md
+++ b/problems/75.sort-colors.md
@@ -38,22 +38,46 @@ https://leetcode-cn.com/problems/sort-colors/
 
 ## 思路
 
-这个问题是典型的[荷兰国旗问题](https://en.wikipedia.org/wiki/Dutch_national_flag_problem)。 因为我们可以将红白蓝三色小球想象成条状物，有序排列后正好组成荷兰国旗。
+这个问题是典型的荷兰国旗问题 （[https://en.wikipedia.org/wiki/Dutch_national_flag_problem）。](https://en.wikipedia.org/wiki/Dutch_national_flag_problem%EF%BC%89%E3%80%82) 因为我们可以将红白蓝三色小球想象成条状物，有序排列后正好组成荷兰国旗。
 
-有两种解决思路。
-
-## 解法一
+## 解法一 - 计数排序
 
 - 遍历数组，统计红白蓝三色球（0，1，2）的个数
 - 根据红白蓝三色球（0，1，2）的个数重排数组
 
-这种思路的时间复杂度：$O(n)$，需要遍历数组两次。
+这种思路的时间复杂度：$O(n)$，需要遍历数组两次（Two pass）。
 
-## 解法二
+![image](https://user-images.githubusercontent.com/12479470/83542989-4ef55100-a52e-11ea-9a49-a0e9443da5f4.png)
+
+## 解法二 - 挡板法
 
 我们可以把数组分成三部分，前部（全部是 0），中部（全部是 1）和后部（全部是 2）三个部分。每一个元素（红白蓝分别对应 0、1、2）必属于其中之一。将前部和后部各排在数组的前边和后边，中部自然就排好了。
 
 我们用三个指针，设置两个指针 begin 指向前部的末尾的下一个元素（刚开始默认前部无 0，所以指向第一个位置），end 指向后部开头的前一个位置（刚开始默认后部无 2，所以指向最后一个位置），然后设置一个遍历指针 current，从头开始进行遍历。
+
+形象地来说地话就是有两个挡板，这两个挡板实现我们不知道，我们的目标就是移动挡板到合适位置，并且使得挡板每一部分都是合适的颜色。
+
+![image](https://user-images.githubusercontent.com/12479470/83542469-9a5b2f80-a52d-11ea-990d-1b56623ba2c8.png)
+
+还是以题目给的样例来说，初始化挡板位置为最左侧和最右侧：
+
+![image](https://user-images.githubusercontent.com/12479470/83542548-b19a1d00-a52d-11ea-92aa-c2458d7fe178.png)
+
+读取第一个元素是 2，它应该在右边，那么我们移动右边地挡板。
+
+![image](https://user-images.githubusercontent.com/12479470/83542598-c5de1a00-a52d-11ea-9095-c66e1ed20c8f.png)
+
+> 带有背景色的圆圈 1 是第一步的意思。
+
+并将其和移动挡板后挡板右侧地元素进行一次交换，这意味着“被移动挡板右侧地元素已就位”。
+
+![image](https://user-images.githubusercontent.com/12479470/83542711-e9a16000-a52d-11ea-9226-5a385c26174c.png)
+
+。。。
+
+整个过程大概是这样的：
+
+![](https://tva1.sinaimg.cn/large/007S8ZIlly1ggssusgyj7j310m0l2td1.jpg)
 
 这种思路的时间复杂度也是$O(n)$, 只需要遍历数组一次。
 
@@ -68,7 +92,7 @@ https://leetcode-cn.com/problems/sort-colors/
 
 Python3 Code:
 
-```python
+```py
 class Solution:
     def sortColors(self, nums: List[int]) -> None:
         """
@@ -87,9 +111,10 @@ class Solution:
                 p2 -= 1
             else:
                 cur += 1
+
 ```
 
-**复杂度分析**
+**_复杂度分析_**
 
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(1)$
