feat: $ 75 增加相关题目

--- a/problems/75.sort-colors.md
+++ b/problems/75.sort-colors.md
@@ -114,10 +114,33 @@ class Solution:
 
 ```
 
-**_复杂度分析_**
+**复杂度分析**
 
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(1)$
+
+## 相关题目
+
+- [面试题 02.04. 分割链表](https://leetcode-cn.com/problems/partition-list-lcci/)
+
+参考代码：
+
+```py
+class Solution:
+    def partition(self, head: ListNode, x: int) -> ListNode:
+        l1 = cur = head
+        while cur:
+            if cur.val < x:
+                cur.val, l1.val = l1.val, cur.val
+                l1 = l1.next
+            cur = cur.next
+        return head
+```
+
+**复杂度分析**
+
+- 时间复杂度：$O(N)$，其中 N 为链表长度。
+- 空间复杂度：$O(1)$。
 
 大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
