--- a/problems/25.reverse-nodes-in-k-groups.md
+++ b/problems/25.reverse-nodes-in-k-groups.md
@@ -164,39 +164,39 @@ _Python3 Cose_
 
 ```python
 class Solution:
-    def reverseKGroup(self, head: ListNode, k: int) -> ListNode:
-        if head is None or k < 2:
-            return head
-        dummy = ListNode(0)
-        dummy.next = head
-        start = dummy
-        end = head
-        count = 0
-        while end:
-            count += 1
-            if count % k == 0:
-                start = self.reverse(start, end.next)
-                # end 调到下一个
-                end = start.next
-            else:
-                end = end.next
-        return dummy.next
-    # (start, end） 左右都开放
+    # 翻转一个子链表，并且返回新的头与尾
+    def reverse(self, head: ListNode, tail: ListNode, terminal):
+        cur = head
+        pre = None
+        while cur != terminal:
+            next = cur.next
+            cur.next = pre
 
-    def reverse(self, start, end):
-        prev, curr = start, start.next
-        first = curr
-        # 反转
-        while curr != end:
-            next = curr.next
-            curr.next = prev
-            prev = curr
-            curr = next
-        # 将反转后的链表添加到原链表中
-        start.next = prev
-        first.next = end
-        # 返回反转前的头， 也就是反转后的尾部
-        return first
+            pre = cur
+            cur = next
+        return tail, head
+
+    def reverseKGroup(self, head: ListNode, k: int) -> ListNode:
+        ans = ListNode()
+        ans.next = head
+        pre = ans
+
+        while head:
+            tail = pre
+            # 查看剩余部分长度是否大于等于 k
+            for i in range(k):
+                tail = tail.next
+                if not tail:
+                    return ans.next
+            next = tail.next
+            head, tail = self.reverse(head, tail, tail.next)
+            # 把子链表重新接回原链表
+            pre.next = head
+            tail.next = next
+            pre = tail
+            head = next
+        
+        return ans.next
 
 ```
 
