--- a/problems/232.implement-queue-using-stacks.md
+++ b/problems/232.implement-queue-using-stacks.md
@@ -82,7 +82,7 @@ push之前是这样的：
 
 ## 代码
 
-* 语言支持：JS, Python, Java
+* 语言支持：JS, Python, Java, Go
 
 Javascript Code:
 
@@ -251,7 +251,55 @@ class MyQueue {
  * int param_3 = obj.peek();
  * boolean param_4 = obj.empty();
  */
-````
+```
+
+Go Code:
+
+```go
+type MyQueue struct {
+    StackPush []int
+    StackPop  []int
+}
+
+/** Initialize your data structure here. */
+func Constructor() MyQueue {
+    return MyQueue{}
+}
+
+/** Push element x to the back of queue. */
+func (this *MyQueue) Push(x int) {
+    this.StackPush = append(this.StackPush, x)
+}
+
+/** Removes the element from in front of queue and returns that element. */
+func (this *MyQueue) Pop() int {
+    this.Transfer()
+    var x int
+    x, this.StackPop = this.StackPop[0], this.StackPop[1:]
+    return x
+}
+
+/** Get the front element. */
+func (this *MyQueue) Peek() int {
+    this.Transfer()
+    return this.StackPop[0]
+}
+
+/** Returns whether the queue is empty. */
+func (this *MyQueue) Empty() bool {
+    return len(this.StackPop) == 0 && len(this.StackPush) == 0
+}
+
+// StackPush 不为空的时候, 转移到 StackPoP 中
+func (this *MyQueue) Transfer() {
+    var x int
+    for len(this.StackPush)>0 {
+        x, this.StackPush = this.StackPush[0], this.StackPush[1:] // pop
+        this.StackPop = append(this.StackPop, x) // push
+    }
+}
+```
+
 
 **复杂度分析**
 - 时间复杂度：$O(1)$
