--- a/problems/1332.remove-palindromic-subsequences.md
+++ b/problems/1332.remove-palindromic-subsequences.md
@@ -72,7 +72,7 @@ s 仅包含字母 'a'  和 'b'
 
 ## 代码
 
-代码支持：Python3
+代码支持：Python3、Java
 
 Python3 Code:
 
@@ -105,6 +105,21 @@ class Solution:
             return 0
         return 1 if s == s[::-1] else 2
 
+```
+
+Java Code：
+```java
+class Solution {
+    public int removePalindromeSub(String s) {
+        if ("".equals(s)) {
+            return 0;
+        }
+        if (s.equals(new StringBuilder(s).reverse().toString())) {
+            return 1;
+        }
+        return 2;
+    }
+}
 ```
 
 **复杂度分析**
