--- a/problems/24.swapNodesInPairs.md
+++ b/problems/24.swapNodesInPairs.md
@@ -70,7 +70,7 @@ https://leetcode-cn.com/problems/swap-nodes-in-pairs/
 
 ## 代码
 
-* 语言支持：JS，Python3
+* 语言支持：JS，Python3, Go, PHP
 
 ```js
 /**
@@ -125,6 +125,62 @@ class Solution:
         head.next = self.swapPairs(_next.next)
         _next.next = head
         return _next
+```
+
+Go Code:
+
+```go
+/**
+ * Definition for singly-linked list.
+ * type ListNode struct {
+ *     Val int
+ *     Next *ListNode
+ * }
+ */
+func swapPairs(head *ListNode) *ListNode {
+	if head == nil || head.Next == nil {
+		return head
+	}
+
+	next := head.Next
+	head.Next = swapPairs(next.Next) // 剩下的节点递归已经处理好, 拼接到前 2 个节点上
+	next.Next = head
+	return next
+}
+```
+
+PHP Code:
+
+```php
+/**
+ * Definition for a singly-linked list.
+ * class ListNode {
+ *     public $val = 0;
+ *     public $next = null;
+ *     function __construct($val = 0, $next = null) {
+ *         $this->val = $val;
+ *         $this->next = $next;
+ *     }
+ * }
+ */
+class Solution
+{
+
+    /**
+     * @param ListNode $head
+     * @return ListNode
+     */
+    function swapPairs($head)
+    {
+        if (!$head || !$head->next) return $head;
+
+        /** @var ListNode $next */
+        $next = $head->next;
+        $head->next = (new Solution())->swapPairs($next->next); // 递归已经将后面链表处理好, 拼接到前面的元素上
+        $next->next = $head;
+        return $next;
+    }
+}
 ```
 
 **复杂度分析**
