--- a/problems/104.maximum-depth-of-binary-tree.md
+++ b/problems/104.maximum-depth-of-binary-tree.md
@@ -216,6 +216,83 @@ class Solution:
         return depth
 ```
 
+Go Code:
+```go
+/**
+ * Definition for a binary tree node.
+ * type TreeNode struct {
+ *     Val int
+ *     Left *TreeNode
+ *     Right *TreeNode
+ * }
+ */
+// BFS
+func maxDepth(root *TreeNode) int {
+	if root == nil {
+		return 0
+	}
+
+	depth := 1
+	q := []*TreeNode{root, nil} // queue
+	var node *TreeNode
+	for len(q) > 0 {
+		node, q = q[0], q[1:] // pop
+		if node != nil {
+			if node.Left != nil {
+				q = append(q, node.Left)
+			}
+			if node.Right != nil {
+				q = append(q, node.Right)
+			}
+		} else if len(q) > 0 { // 注意要判断队列是否只有一个 nil
+			q = append(q, nil)
+			depth++
+		}
+	}
+	return depth
+}
+```
+
+PHP Code:
+```php
+/**
+ * Definition for a binary tree node.
+ * class TreeNode {
+ *     public $val = null;
+ *     public $left = null;
+ *     public $right = null;
+ *     function __construct($value) { $this->val = $value; }
+ * }
+ */
+class Solution
+{
+
+    /**
+     * @param TreeNode $root
+     * @return Integer
+     */
+    function maxDepth($root)
+    {
+        if (!$root) return 0;
+
+        $depth = 1;
+        $arr = [$root, null];
+        while ($arr) {
+            /** @var TreeNode $node */
+            $node = array_shift($arr);
+            if ($node) {
+                if ($node->left) array_push($arr, $node->left);
+                if ($node->right) array_push($arr, $node->right);
+            } elseif ($arr) {
+                $depth++;
+                array_push($arr, null);
+            }
+        }
+        return $depth;
+    }
+}
+```
+
 **复杂度分析**
 
 - 时间复杂度：$O(N)$
